# lfm2-web-search-agent

./: .gitignore  README.md  agent.py  model_path  pyproject.toml
